Noteworthy changes in version 2.5.1 (unreleased)
------------------------------------------------

 * gpg: New option --proc-all-sigs.  [T7261]


  Release-info: https://dev.gnupg.org/T7191


Noteworthy changes in version 2.5.0 (2024-07-05)
------------------------------------------------

  * gpg: Support composite Kyber+ECC public key algorithms.  This is
    experimental due to the yet outstanding FIPS-203 specification.
    [T6815]

  * gpg: Allow algo string "pqc" for --quick-gen-key.  [rG12ac129a70]

  * gpg: New option --show-only-session-key.  [rG1695cf267e]

  * gpg: Print designated revokers also in non-colon listing mode.
    [rG9d618d1273]

  * gpg: Make --with-sig-check work with --show-key in non-colon
    listing mode.  [rG0c34edc443]

  * tpm: Rework error handling and fix key import [T7129, T7186]

  * Varous fixes to improve robustness on 64 bit Windows.  [T7139]


  Changes also found in 2.4.6:

  * gpg: New command --quick-set-ownertrust.  [rG967678d972]

  * gpg: Indicate disabled keys in key listings and add list option
    "show-ownertrust".  [rG2a0a706eb2]

  * gpg: Make sure a DECRYPTION_OKAY is never issued for a bad OCB
    tag.  [T7042]

  * gpg: Do not allow to accidently set the RENC usage.  [T7072]

  * gpg: Accept armored files without CRC24 checksum.  [T7071]

  * gpg: New --import-option "only-pubkeys".  [T7146]

  * gpg: Repurpose the AKL mechanism "ldap" to work like the keyserver
    mechnism but only for LDAP keyservers.  [rG068ebb6f1e]

  * gpg: ADSKs are now configurable for new keys.  [T6882]

  * gpgsm: Emit user IDs with an empty Subject also in colon mode.
    [T7171]

  * agent: Consider an empty pattern file as valid.  [rGc27534de95]

  * agent: Fix error handling of READKEY.  [T6012]

  * agent: Avoid random errors when storing key in ephemeral mode.
    [T7129, rGfdc5003956]

  * agent: Make "SCD DEVINFO --watch" more robust.  [T7151]

  * scd: Improve KDF data object handling for OpenPGP cards.  [T7058]
